css fixes and added trim in input field value to handled extra spaces

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,7 +137,7 @@ input {
 }
 
 .todo-scroll {
-  max-height: 300px;
+  max-height: 260px;
   overflow-y: scroll;
   margin-right: 20px;
 }
